00_Task_Overview/my-solutions/YAML_Files/task_3.1/main_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: main-api
  name: main-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: main-api
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo

        args:
          - -text="Hello from Main API"
        resources: {}
status: {}
