00_Task_Overview/my-solutions/YAML_Files/task_3.1/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: users-api-svc
            port:
              number: 80
        path: /api/users
        pathType: Prefix
      - backend:
          service:
            name: orders-api-svc
            port:
              number: 80
        path: /api/orders
        pathType: Prefix
      - backend:
          service:
            name: main-api-svc
            port:
              number: 80
        path: /
        pathType: Prefix
